ChitChat.Backend/Kubernetes/rabbitmq-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: rabbitmq-depl
spec:
    selector:
        matchLabels:
            app: rabbitmq-depl
    template:
        metadata:
            labels:
                app: rabbitmq-depl
        spec:
            containers:
                - name: rabbitmq-depl
                  image: rabbitmq:3-management
                  resources:
                      limits:
                          memory: '128Mi'
                          cpu: '500m'
                  ports:
                      - containerPort: 15672
                        name: rbmq-mgmt-port
                      - containerPort: 5672
                        name: rbmq-msg-port
---
apiVersion: v1
kind: Service
metadata:
    name: rabbitmq-clusterip-srv
spec:
    type: ClusterIP
    selector:
        app: rabbitmq-depl
    ports:
        - name: rbmq-mgmt-port
          protocol: TCP
          port: 15672
          targetPort: 15672
        - name: rbmq-msg-port
          protocol: TCP
          port: 5672
          targetPort: 5672
---
apiVersion: v1
kind: Service
metadata:
    name: rabbitmq-loadbalancer
spec:
    type: LoadBalancer
    selector:
        app: rabbitmq-depl
    ports:
        - name: rbmq-mgmt-port
          protocol: TCP
          port: 15672
          targetPort: 15672
        - name: rbmq-msg-port
          protocol: TCP
          port: 5672
          targetPort: 5672
