ChitChat.Backend/Kubernetes/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-srv
    annotations:
        nginx.ingress.kubernetes.io/websocket-services: 'chitchat-users-clusterip-srv,chitchat-chat-clusterip-srv'
        nginx.ingress.kubernetes.io/enable-cors: 'true'
        nginx.ingress.kubernetes.io/cors-allow-origin: 'http://localhost:5173'
        nginx.ingress.kubernetes.io/cors-allow-headers: 'token,content-type'
        nginx.ingress.kubernetes.io/cors-allow-credentials: 'true'
spec:
    ingressClassName: nginx
    tls:
        - hosts:
              - chitchat.prod.dev
          secretName: tls-secret
    rules:
        - host: chitchat.prod.dev
          http:
              paths:
                  - path: /graphql/users
                    pathType: Prefix
                    backend:
                        service:
                            name: chitchat-users-clusterip-srv
                            port:
                                number: 4000
                  - path: /graphql/chat
                    pathType: Prefix
                    backend:
                        service:
                            name: chitchat-chat-clusterip-srv
                            port:
                                number: 4001
